--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "concurrently": "^4.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.6.6",
-    "purecss": "^1.0.1"
+    "mongoose": "^5.6.6"
   },
   "devDependencies": {
     "morgan": "^1.9.1",
