--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/retrokyo/fo-po-ref-prototype#readme",
   "dependencies": {
-    "concurrently": "^4.1.2"
+    "concurrently": "^4.1.2",
+    "nodemon": "^1.19.1",
+    "react-helmet": "^5.2.1"
   }
 }
