--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "homepage": "https://github.com/retrokyo/fo-po-ref-prototype#readme",
   "dependencies": {
     "concurrently": "^4.1.2",
-    "nodemon": "^1.19.1",
-    "react-helmet": "^5.2.1"
+    "nodemon": "^1.19.1"
   }
 }
